--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="container">
       <header>Registration Form</header>
-      <form action="https://formsubmit.co/achyut.mechual@gmail.com" method="POST" class="form">
+      <form action="https://formsubmit.co/achyut.mechual@gmail.com" class="form" method="POST" >
 
         <input type="hidden" name="_next" value="https://mechual.in/">
         <input type="hidden" name="_subject" value="New submission!">
