--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>Registration Form</header>
       <form action="https://formsubmit.co/mechualtechnologies@gmail.com" class="form" method="POST" >
 
-        <input type="hidden" name="_next" value="https://mechual.in/">
+        <input type="hidden" name="_next" value="https://mechual.in/thank_you/thank_you.html">
         <input type="hidden" name="_subject" value="New submission!">
 
 
