--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="container">
       <header>Registration Form</header>
-      <form action="https://formsubmit.co/mechualtechnologies@gmail.com" class="form" method="POST" >
+      <form action="https://formsubmit.co/web.mechual@gmail.com" class="form" method="POST" >
 
         <input type="hidden" name="_next" value="https://mechual.in/thank_you/thank_you.html">
         <input type="hidden" name="_subject" value="New submission!">
