--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <header>Registration Form</header>
       <form action="https://formsubmit.co/web.mechual@gmail.com" class="form" method="POST" >
 
-  
+    
+
 
         <div class="input-box">
           <label>Full Name</label>
@@ -75,6 +76,9 @@
           </div>
         </div>
         <button>Submit</button>
+          <input type="hidden" name="_captcha" value="false">
+
+    <input type="hidden" name="_next" value="https://mechual.in/thank_you/thanks.html">
       </form>
     </section>
   </body>
