--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <button>Submit</button>
           <input type="hidden" name="_captcha" value="false">
 
-    <input type="hidden" name="_next" value="https://mechual.in/thank_you/thanks.html">
+    <input type="hidden" name="_next" value="https://mechual.in/thank_you/thank_you.html">
       </form>
     </section>
   </body>
