--- a/index.html
+++ b/index.html
@@ -1,85 +1,79 @@
 <!DOCTYPE html>
-<!---Coding By CodingLab | www.codinglabweb.com--->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!--<title>Registration Form in HTML CSS</title>-->
-    <!---Custom CSS File--->
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/5/sandstone/bootstrap.min.css"
+    />
   </head>
   <body>
-    <section class="container">
-      <header>Registration Form</header>
-      <form action="https://formsubmit.co/web.mechual@gmail.com" class="form" method="POST" >
-
-    
-
-
-        <div class="input-box">
-          <label>Full Name</label>
-          <input type="text" placeholder="Enter full name" required />
+    <nav class="navbar navbar-dark bg-primary">
+      <div class="container">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">My Site</a>
         </div>
+      </div>
+    </nav>
 
-        <div class="input-box">
-          <label>Email Address</label>
-          <input type="email" placeholder="Enter email address" required />
-        </div>
-
-        <div class="column">
-          <div class="input-box">
-            <label>Phone Number</label>
-            <input type="number" placeholder="Enter phone number" required />
-          </div>
-          <div class="input-box">
-            <label>Birth Date</label>
-            <input type="date" placeholder="Enter birth date" required />
-          </div>
-        </div>
-        <div class="gender-box">
-          <h3>Gender</h3>
-          <div class="gender-option">
-            <div class="gender">
-              <input type="radio" id="check-male" name="gender" checked />
-              <label for="check-male">male</label>
+    <div class="container">
+      <div class="row">
+        <div class="col-5">
+          <h1 class="mb-5">Contact Us</h1>
+          <form
+            action="https://formsubmit.co/c23b26ee992b10b72a0d368322840d9d"
+            method="POST"
+          >
+            <div class="mb-3">
+              <label class="form-label">Full Name</label>
+              <input name="name" type="text" class="form-control" required />
             </div>
-            <div class="gender">
-              <input type="radio" id="check-female" name="gender" />
-              <label for="check-female">Female</label>
-            </div>
-            <div class="gender">
-              <input type="radio" id="check-other" name="gender" />
-              <label for="check-other">prefer not to say</label>
-            </div>
-          </div>
-        </div>
-        <div class="input-box address">
-          <label>Address</label>
-          <input type="text" placeholder="Enter street address" required />
-          <input type="text" placeholder="Enter street address line 2" required />
-          <div class="column">
-            <div class="select-box">
-              <select>
-                <option hidden>Country</option>
-                <option>America</option>
-                <option>Japan</option>
-                <option>India</option>
-                <option>Nepal</option>
-              </select>
-            </div>
-            <input type="text" placeholder="Enter your city" required />
-          </div>
-          <div class="column">
-            <input type="text" placeholder="Enter your region" required />
-            <input type="number" placeholder="Enter postal code" required />
-          </div>
-        </div>
-        <button>Submit</button>
-          <input type="hidden" name="_captcha" value="false">
 
-    <input type="hidden" name="_next" value="https://mechual.in/thank_you/thank_you.html">
-      </form>
-    </section>
+            <div class="mb-3">
+              <label class="form-label">Email address</label>
+              <input name="email" type="email" class="form-control" required />
+              <div id="emailHelp" class="form-text">
+                Don't worry, we won't share it with anyone else.
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Phone (optional)</label>
+              <input name="phone" \type="tel" class="form-control" />
+              <div id="phoneHelp" class="form-text">
+                If you rather talk to a human directly.
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Your Message</label>
+              <textarea
+                name="message"
+                class="form-control"
+                rows="3"
+                required
+              ></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+
+        <div class="col-1"></div>
+
+        <div class="col-6 position-relative">
+          <img
+            src="mail.svg"
+            class="w-75 position-absolute top-50 start-50 translate-middle"
+          />
+        </div>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
