--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             action="https://formsubmit.co/c23b26ee992b10b72a0d368322840d9d"
             method="POST"
           >
-            <div class="mb-3">
+            <div class="input-box">
               <label class="form-label">Full Name</label>
               <input name="name" type="text" class="form-control" required />
             </div>
 
-            <div class="mb-3">
+            <div class="input-box">
               <label class="form-label">Email address</label>
               <input name="email" type="email" class="form-control" required />
               <div id="emailHelp" class="form-text">
@@ -41,7 +41,7 @@
               </div>
             </div>
 
-            <div class="mb-3">
+            <div class="input-box">
               <label class="form-label">Phone (optional)</label>
               <input name="phone" \type="tel" class="form-control" />
               <div id="phoneHelp" class="form-text">
@@ -49,7 +49,7 @@
               </div>
             </div>
 
-            <div class="mb-3">
+            <div class="input-box">
               <label class="form-label">Your Message</label>
               <textarea
                 name="message"
