--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 required
               ></textarea>
             </div>
+          <input type="hidden" name="_captcha" value="false">
 
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
