--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               ></textarea>
             </div>
           <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+            <input type="hidden" name="_next" value="https://mechual.in/thank_you/thank_you.html">
 
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
