web.dfg index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="container">
       <header>Registration Form</header>
       <div class="form">
-      <form action="https://formsubmit.co/achyut.mechual@gmail.com" method="POST" >
+      <form action="https://formsubmit.co/web.mechual@gmail.com" method="POST" >
 
         <input type="hidden" name="_next" value="https://mechual.in/">
         <input type="hidden" name="_subject" value="New submission!">
